styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer {
  .nav-item-container {
    @apply flex items-center  text-xl opacity-80 hover:text-white hover:opacity-100 p-4;
  }
  .learn-dropdown-grid {
    display: grid;
    grid-template-columns: repeat(3, auto);
  }
  .developers-dropdown-grid {
    display: inline-grid;
    grid-template-columns: repeat(4, auto);
  }
  .ul-bullet {
    @apply text-primary w-8 h-8 shrink-0;
  }
  .phone-glow {
    @apply h-full w-full absolute;
    background: radial-gradient(
      circle at 50% 50%,
      rgba(181, 69, 16, 0.4),
      transparent 225px
    );
  }
  @media only screen and (min-width: 768px) {
    .phone-glow {
      background: radial-gradient(
        circle at 50% 50%,
        rgba(181, 69, 16, 0.4),
        transparent 305px
      );
    }
  }
  @media only screen and (min-width: 1024px) {
    .phone-glow {
      background: radial-gradient(
        circle at 50% 50%,
        rgba(181, 69, 16, 0.4),
        transparent 480px
      );
    }
  }
}

